----------------------------------------------------------------------
 OmegaT 3.0.4
----------------------------------------------------------------------
   8 Enhancements
   6 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
3.0.3 update 1 vs. 3.0.3

  Implemented requests:

  - Add support for monolingual .po files 
  https://sourceforge.net/p/omegat/feature-requests/865/

  - Allow 12 scripts in the Tools menu
  https://sourceforge.net/p/omegat/feature-requests/843/

  - Add support for for creationid and creationdate in TMX
  https://sourceforge.net/p/omegat/feature-requests/744/

  - Exactly equal suggestions from diferents tmx show only as one
  https://sourceforge.net/p/omegat/feature-requests/874/

  - Print non-string data types with console.print() and println() 
  https://sourceforge.net/p/omegat/feature-requests/875/

  - Sorted list of scripts 
  https://sourceforge.net/p/omegat/feature-requests/878/

  - Default shortcut for "Insert next Missing Tag" 
  https://sourceforge.net/p/omegat/feature-requests/856/

 Other enhancements:

  - Linux: Zenity is not needed anymore in omegat.kaptn to display 
OmegaT's version, and several typos were corrected

  Bug fixes: 

  - Scripts folder is not created in Windows packages  
  https://sourceforge.net/p/omegat/bugs/595/

  - Stop word discarded from glossary when using tokenizer 
  https://sourceforge.net/p/omegat/bugs/484/

  - Language checker does not work in Japanese 
  https://sourceforge.net/p/omegat/bugs/593/

  - The log contained an exception related to the LanguageTool module.
This exception was related to a multithreading issue, which has been
fixed.

  - There was a whitespace handling error in the external command parser

  - There was an exception when LanguageTool was enabled with no project
loaded

----------------------------------------------------------------------
 OmegaT 3.0.3